# NLU-RS-Project

./: .gitignore  pyproject.toml
LM/: firstPart_RS.tex
LM/part_A/: functions.py  main.py  model.py  models.py  params.py  plotter.py  utils.py
LM/part_A/configs/: config.yaml
LM/part_A/results/: mod-LSTM_drop-yes_opt-AdamW_hid-250_emb-350_lr-1e+00.txt  mod-LSTM_drop-yes_opt-AdamW_hid-250_emb-350_lr-1e-02.txt  mod-LSTM_drop-yes_opt-AdamW_hid-250_emb-350_lr-1e-04.txt  mod-LSTM_drop-yes_opt-AdamW_hid-250_emb-350_lr-5e-02.txt  mod-LSTM_drop-yes_opt-SGD_hid-250_emb-350_lr-5e-01.txt  mod-LSTM_drop-yes_opt-SGD_hid-250_emb-350_lr-5e-02.txt  mod-LSTM_drop_opt-AdamW_hid-250_emb-350_lr-1e-01.txt  mod-LSTM_drop_opt-AdamW_hid-250_emb-350_lr-1e-03.txt  mod-LSTM_drop_opt-AdamW_hid-250_emb-350_lr-5e-01.txt  mod-LSTM_drop_opt-AdamW_hid-250_emb-350_lr-5e-03.txt  mod-LSTM_drop_opt-AdamW_hid-250_emb-350_lr-5e-04.txt  mod-LSTM_drop_opt-SGD_hid-250_emb-350_lr-1e+00.txt  mod-LSTM_drop_opt-SGD_hid-250_emb-350_lr-1e-01.txt  mod-LSTM_opt-SGD_hid-250_emb-350_lr-1e+00.txt  mod-LSTM_opt-SGD_hid-250_emb-350_lr-1e-01.txt  mod-RNN_opt-SGD_hid-150_emb-250_lr-5e-01.txt  mod-RNN_opt-SGD_hid-150_emb-250_lr-5e-02.txt  mod-RNN_opt-SGD_hid-150_emb-350_lr-1e+00.txt  models_LSTM.txt  models_LSTM_0_05.txt  (+47 more)
LM/part_B/: README.md  functions.py  main.py  model.py  models.py  params.py  test.py  train.py  train_NTAvSGD .py  utils.py
NLU/: secondPart_RS.tex
NLU/part_A/: functions.py  main-legacy.py  main.py  models.py  params.py  utils.py
NLU/part_B/: functions.py  main.py  models.py  params.py  utils.py
(+339 files in other folders)
